---------------------------------------------------------------------------------------------------
Version: 2.3.5
Date: ????
  Changes:
    - When updating the schedule, try to keep the depot stop valid all the time
---------------------------------------------------------------------------------------------------
Version: 2.3.4
Date: 2025-06-23
  Changes:
    - restore the behavior that the virtual signals for the lamp color are only present on the green wire. Add documentation.
    - allow negative amount of fuel for refuel station (treat it as positive). Allows using the LTN combinator to provide fuel amounts.
  Bugfixes:
    - fuel station lamp switched to blue when train parked, then back to cyan when train leaves
---------------------------------------------------------------------------------------------------
Version: 2.3.3
Date: 2025-05-09
  Bugfixes:
    - fix broken GetNextLogisticStop function (Reported by @harag-on-stream on Github, PR #18. Thank you!)
    - when a train is put under LTN control, it is removed from a train group first (Suggested by @wchristian on Github, #17. Thank you!)
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.3.2
Date: 2025-03-21
  Changes:
    - Make schedule parsing more robust after someone managed to trigger the `assert(record.provider ~= record.requester)` assert. Reported by @labminto on the mod forum.
---------------------------------------------------------------------------------------------------
Version: 2.3.1
Date: 2025-03-20
  Bugfixes:
    - Fix the prototype meld statements
    - Explicitly initialize the storage depot array. Fixes #14, reported by @ITZtephen on github
---------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: 2025-03-11
  Changes:
    - refactor schedule management with new LuaSchedule API
    - add new station type 'fuel station'